# sgpt-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_zh.md
.github/workflows/: release.yml
doc/: Analytics.md  Code.md  Config.md  Keybindings.md  Model.md  Paste.md  Plan.md  RAG.md  Role.md  TUI.md
src/: cli.rs  main.rs
src/cache/: mod.rs
src/config/: mod.rs
src/execution/: mod.rs  python.rs
src/functions/: mod.rs
src/handlers/: chat.rs  code.rs  default.rs  describe.rs  enhanced_search.rs  mod.rs  repl.rs  shell.rs
src/integration/: mod.rs
src/llm/: mod.rs
src/printer/: mod.rs
src/process/: mod.rs  python.rs
src/role/: mod.rs
src/tui/: app.rs  events.rs  handler.rs  mod.rs  ui.rs
src/utils/: command.rs  document.rs  mod.rs  pdf.rs  unicode.rs
tests/: pdf_extract_test.rs  simple_pdf_test.rs
