[package]
name = "sgpt"
version = "0.4.5"
edition = "2021"
description = "Use LLM in Shell"
license = "MIT"

[features]
# Default features keep the binary lean. Opt-in to Responses API scaffolding when needed.
default = []
responses-api = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
owo-colors = "4"
termimad = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "process", "time"] }
directories = "5.0"
is-terminal = "0.4"
futures-core = "0.3"
async-stream = "0.3"
futures-util = "0.3"
futures = "0.3"
md5 = "0.7"
pdf-extract = "0.7"
tempfile = "3.0"
ratatui = "0.28"
crossterm = "0.28"
unicode-width = "0.1"
